Stop subtitle getting too long line length
Fixes #39

--- a/style/styles.css
+++ b/style/styles.css
@@ -210,6 +210,7 @@ h1 {
 .subtitle {
 	font-size: 1.15em;
 	margin: 1.25em 0;
+	max-width: 30em;
 }
 
 /* Navigation */
